tests/expectations/compiler/function/transition_calls_async_function_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372110]: A `transition` cannot return a future.
    --> compiler-test:5:35
     |
   5 |   transition f(a: u64, b: u64) -> Future {
     |                                   ^^^^^^
     |
     = Use an `async transition` instead.
Error [ETYC0372111]: The async function `finish` does not exist.
    --> compiler-test:6:12
     |
   6 |     return finish(a, b);
     |            ^^^^^^^^^^^^
     |
     = Ensure that `finish` is defined as an async function in the current program.
Error [ETYC0372088]: An async transition must call an async function.
    --> compiler-test:9:3
     |
   9 |   async transition finish(a: u64, b: u64) {
  10 |     if (b == 0u64) {
  11 |       assert_eq(b, 0u64);
  12 |     } else {
  13 |       assert_eq(a / b, 1u64);
  14 |     }
  15 |   }
     |   ^
     |
     = Example: `async transition foo() -> Future { let a: Future = bar(); return await_futures(a); }`
"""]
